1.course view feature 2.global exception handler

--- a/LOTAWeb/Views/Shared/_Layout.cshtml
+++ b/LOTAWeb/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                         </a>
                     </li>
                     <li class="nav-item mb-2">
-                        <a class="nav-link text-dark d-flex align-items-center py-2 px-3 rounded" href="#">
+                        <a class="nav-link text-dark d-flex align-items-center py-2 px-3 rounded" asp-area="Admin" asp-controller="Course" asp-action="Index">
                             <i class="fas fa-book me-3"></i>
                             Manage Courses
                         </a>
