--- a/LOTAWeb/Areas/Admin/Views/Course/Index.cshtml
+++ b/LOTAWeb/Areas/Admin/Views/Course/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model IEnumerable<LOTA.Model.Course>
+@model IEnumerable<LOTA.Model.DTO.CourseReturnDTO>
 @{
     ViewData["Title"] = "Course Management";
     Layout = "~/Views/Shared/_Layout.cshtml";
