--- a/LOTAWeb/Views/Shared/_Layout.cshtml
+++ b/LOTAWeb/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="~/LOTAWeb.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
+    @await RenderSectionAsync("Styles", required: false)
 </head>
 <body>
     <!-- Top Header -->
@@ -258,7 +260,7 @@
             padding-right: 0 !important;
         }
     </style>
-
-    @await RenderSectionAsync("Scripts", required: false)
 </body>
+
+@await RenderSectionAsync("Scripts", required: false)
 </html>
